fix: Fix rendering on FF and unship sourceMaps as it is broken

--- a/demo/code-configurator.html
+++ b/demo/code-configurator.html
@@ -23,6 +23,13 @@
           configurator.properties = properties;
           configurator.cssProperties = cssProperties;
           configurator.customElement = 'app-datepicker';
+
+          // setTimeout(() => {
+          //   const datepicker = document.createElement('app-datepicker');
+          //   datepicker.setAttribute('slot', 'element');
+
+          //   configurator.appendChild(datepicker);
+          // }, 10e3);
         }
       };
     </script>
