fix: Drop named slot

--- a/demo/code-configurator.html
+++ b/demo/code-configurator.html
@@ -12,8 +12,8 @@
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,700" crossorigin="anonymous" onload="this.rel = 'stylesheet';" as="font"/>
 
     <script type="module">
-      import 'https://unpkg.com/app-datepicker@next?module';
       import '../dist/code-configurator/code-configurator.js';
+      import 'https://unpkg.com/app-datepicker@next?module';
       import { properties, cssProperties } from './properties.config.js';
 
       window.onload = () => {
@@ -65,7 +65,7 @@
     </style>
 
     <really-code-configurator>
-      <app-datepicker slot="element"></app-datepicker>
+      <app-datepicker></app-datepicker>
     </really-code-configurator>
   </body>
 </html>
