fix: Fix wrong content in code snippets, fix checkbox not checked
Add test to test computed code snippets

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           type: 'string',
         },
         {
+          name: 'propertyStringEmpty',
+          value: '',
+          type: 'string',
+        },
+        {
           name: 'propertyNumber',
           value: 0,
           type: 'number',
@@ -29,6 +34,11 @@
         {
           name: 'propertyBoolean',
           value: true,
+          type: 'boolean',
+        },
+        {
+          name: 'propertyBooleanFalse',
+          value: false,
           type: 'boolean',
         },
         {
@@ -56,6 +66,10 @@
         {
           name: '--test-property-width',
           value: '2px',
+        },
+        {
+          name: '--test-dummy-property',
+          value: '',
         },
         {
           name: '--test-property-height',
